<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView android:text="@string/nanodegree_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:textColor="#303F9F"
        android:gravity="center"
        android:padding="15dp" />

    <Button
        android:text="@string/btn_spotify_streamer_text"
        android:id="@+id/btn_spotify_streamer"
        style="@style/OrangeButton"
        android:onClick="clickEvent"/>
    <Button
        android:text="@string/btn_score_text"
        android:id="@+id/btn_scores"
        style="@style/OrangeButton"
        android:onClick="clickEvent"/>
    <Button
        android:text="@string/btn_library_text"
        android:id="@+id/btn_library"
        style="@style/OrangeButton"
        android:onClick="clickEvent"/>
    <Button
        android:text="@string/btn_built_it_text"
        android:id="@+id/btn_build"
        style="@style/OrangeButton"
        android:onClick="clickEvent"/>
    <Button
        android:text="@string/btn_bacon_reader_text"
        android:id="@+id/btn_beacon"
        style="@style/OrangeButton"
        android:onClick="clickEvent"/>
    <Button
        android:text="@string/btn_capstone_text"
        android:id="@+id/btn_capstone"
        style="@style/PinkButton"
        android:onClick="clickEvent"/>

</LinearLayout>
